--- a/res/xml/blaze_house_quicksettings.xml
+++ b/res/xml/blaze_house_quicksettings.xml
@@ -55,6 +55,15 @@
             android:entryValues="@array/qs_styles_values"
             android:summary="%s"
             android:defaultValue="0" />
+            
+        <!-- QS Header Image -->
+        <com.blaze.house.preferences.SystemSettingSeekBarPreference
+            android:key="qs_header_image"
+            android:title="@string/qs_header_image_title"
+            android:defaultValue="0"
+            settings:interval="1"
+            android:max="36"
+            android:min="0" />
       
       <!-- QS UI -->
     	<com.blaze.house.preferences.SystemSettingListPreference
