--- a/res/xml/blaze_house_system.xml
+++ b/res/xml/blaze_house_system.xml
@@ -27,6 +27,12 @@
                 android:title="@string/toast_icon_title"
                 android:summary="@string/toast_icon_summary"
                 android:defaultValue="true"/>
+                
+            <com.blaze.house.preferences.SecureSettingSwitchPreference
+          	    android:key="media_controls_always_show_time"
+        	      android:title="@string/media_controls_always_show_time_title"
+        	      android:summary="@string/media_controls_always_show_time_summary"
+        	      android:defaultValue="false" />
 
     </PreferenceCategory>
     
