--- a/res/values/blaze_strings.xml
+++ b/res/values/blaze_strings.xml
@@ -176,4 +176,8 @@
 
     <!-- QS panel transparency -->
     <string name="qs_transparency_title">Background transparency</string>
+    
+    <!-- Island Notification -->
+    <string name="island_notification_title">Island notification</string>
+    <string name="island_notification_summary">Display a heads-up notification in the style of IOS dynamic island.</string>
 </resources>
