--- a/res/xml/blaze_house_notifications.xml
+++ b/res/xml/blaze_house_notifications.xml
@@ -17,8 +17,9 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/notifications_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
-    
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <PreferenceCategory
         android:title="@string/general_category">
         
@@ -27,6 +28,12 @@
             android:title="@string/less_boring_heads_up_title"
             android:summary="@string/less_boring_heads_up_summary"
             android:defaultValue="false" />
+            
+            <com.blaze.house.preferences.SystemSwitchPreference
+                android:key="island_notification"
+                android:title="@string/island_notification_title"
+                android:summary="@string/island_notification_summary"
+                android:defaultValue="false"/>
 
     </PreferenceCategory>
 
