--- a/res/xml/blaze_house_statusbar.xml
+++ b/res/xml/blaze_house_statusbar.xml
@@ -20,6 +20,14 @@
     
     <PreferenceCategory
         android:title="@string/network_category">
+
+        <!-- Network Traffic -->
+        <Preference
+            android:key="network_traffic_state"
+            android:title="@string/network_traffic_state_title"
+            android:summary="@string/network_traffic_state_summary"
+            android:fragment="com.blaze.house.fragments.NetworkTrafficSettings"
+            android:defaultValue="false" />
         
         <com.blaze.house.preferences.SystemSettingSwitchPreference
             android:key="show_fourg_icon"
