--- a/res/xml/blaze_house_gestures.xml
+++ b/res/xml/blaze_house_gestures.xml
@@ -26,7 +26,13 @@
         android:title="@string/three_finger_gesture"
         android:summary="@string/three_finger_gesture_summary"
         android:defaultValue="false" />
-        
+
+    <com.blaze.house.preferences.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_battery_info_title"
+        android:summary="@string/lockscreen_battery_info_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:key="dtts_gesture_summary"
         android:title="@string/dtts_gesture_title"
