--- a/res/xml/blaze_house_theme.xml
+++ b/res/xml/blaze_house_theme.xml
@@ -18,5 +18,18 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/theme_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
+    
+    <PreferenceCategory
+        android:title="@string/general_category">
+        
+        <!-- Monet settings -->
+        <Preference
+            android:key="monet_settings"
+            android:title="@string/monet_settings_title"
+            android:summary="@string/monet_settings_sammary"
+            android:fragment="com.android.settings.display.MonetSettings" />
+
+    </PreferenceCategory>
+    
 
 </PreferenceScreen>
